--- a/markdown/Attrition.Rmd
+++ b/markdown/Attrition.Rmd
@@ -506,3 +506,57 @@ ggplot(attrition_data, aes(x = MonthlyIncome)) +
   facet_wrap(~Attrition)
 ```
 
+```{r Pre-processing and Transformation}
+# Check for missing values in the dataset
+missing_values <- colSums(is.na(attrition_data))
+
+# Check if there are any missing values in any column
+any_missing <- any(missing_values > 0)
+
+# Print the results
+if (any_missing) {
+  print("There are missing values in the dataset.")
+  # Display the number of missing values in each column
+  print(missing_values[missing_values > 0])
+} else {
+  print("There are no missing values in the dataset.")
+}
+```
+
+```{r data transformation}
+# Load required package for data transformation
+library(caret)
+
+# Function to normalize numeric variables
+normalize_data <- function(data) {
+  normalized_data <- as.data.frame(apply(data, 2, function(x) (x - min(x)) / (max(x) - min(x))))
+  return(normalized_data)
+}
+
+# Apply normalization to numeric variables
+normalized_attrition_data <- normalize_data(attrition_data[, c("Age", "DailyRate", "DistanceFromHome", "MonthlyIncome", "MonthlyRate", "NumCompaniesWorked", "PercentSalaryHike", "TotalWorkingYears", "TrainingTimesLastYear", "YearsAtCompany", "YearsInCurrentRole", "YearsSinceLastPromotion", "YearsWithCurrManager")])
+
+# Display the first few rows of the normalized dataset
+head(normalized_attrition_data)
+
+# Check the number of levels for each factor variable
+factor_levels <- sapply(attrition_data, function(x) {
+  if (is.factor(x)) {
+    return(length(levels(x)))
+  } else {
+    return(0)  # For non-factor variables
+  }
+})
+
+# Identify factor variables with only one level
+single_level_factors <- names(factor_levels[factor_levels == 1])
+
+# Print the names of factor variables with only one level
+print(single_level_factors)
+
+# If you want to remove these variables from the modeling process:
+attrition_data <- attrition_data[, !names(attrition_data) %in% single_level_factors]
+```
+
+
+
